[gd_scene load_steps=26 format=3 uid="uid://hsefbvcc8bbp"]

[ext_resource type="PackedScene" uid="uid://u0343aumvhfh" path="res://gltf/GodoDude_Rigged_1.gltf" id="1_w0tqc"]
[ext_resource type="Script" path="res://Skeleton3D.gd" id="2_0ra0b"]
[ext_resource type="Texture2D" uid="uid://bvx44gfoybit4" path="res://Textures/Texture_Color.png" id="2_vxwx8"]
[ext_resource type="Material" uid="uid://cl37upvs2iye" path="res://Materials/Controller_IK_dark_green.tres" id="2_yeyil"]
[ext_resource type="Texture2D" uid="uid://c3g3t2p3beuw3" path="res://Textures/Roughness.png" id="3_bpjtu"]
[ext_resource type="Material" uid="uid://kgr5vo7i4vsd" path="res://Materials/Controller_IK_bright_green.tres" id="3_ie47r"]
[ext_resource type="Material" uid="uid://bp5c4g5flyp2h" path="res://Materials/Controller_IK_bright_yellow.tres" id="6_cgxpr"]

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_hvg7x"]
bone_name = "thigh.L"
bone_index = 57
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets/Left_Knee/Target_Graph2")
additional_rotation = Vector3(0, 180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_y6n0m"]
bone_index = 62
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets/Right_Knee/Target_Graph2")
additional_rotation = Vector3(0, -180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_y56a8"]
bone_index = 58
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left/Left_Foot_Target")
additional_rotation = Vector3(0, 180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_t7aly"]
bone_index = 63
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right/Right_Foot_Target")
additional_rotation = Vector3(0, 180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_e40j6"]
bone_index = 64
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right/Right_Feet_Tip/Right_Feet_Target_1")

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_tf4is"]
bone_index = 65
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right/Right_Feet_Tip/Right_Feet_Target_1/Right_Feet_Target_2")
additional_rotation = Vector3(0, 180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_6p63m"]
bone_index = 59
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left/Left_Feet_Tip/Left_Feet_Target_1")

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_iu52u"]
bone_index = 60
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left/Left_Feet_Tip/Left_Feet_Target_1/Left_Feet_Target_2")
additional_rotation = Vector3(0, 180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_a6lgw"]
bone_index = 62
target_nodepath = NodePath("IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets/Right_Knee/Target_Graph2")
additional_rotation = Vector3(0, 180, 0)

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_0mqfe"]
enabled = true
modification_count = 9
modifications/0 = SubResource("SkeletonModification3DLookAt_hvg7x")
modifications/1 = SubResource("SkeletonModification3DLookAt_y6n0m")
modifications/2 = SubResource("SkeletonModification3DLookAt_y56a8")
modifications/3 = SubResource("SkeletonModification3DLookAt_t7aly")
modifications/4 = SubResource("SkeletonModification3DLookAt_e40j6")
modifications/5 = SubResource("SkeletonModification3DLookAt_tf4is")
modifications/6 = SubResource("SkeletonModification3DLookAt_6p63m")
modifications/7 = SubResource("SkeletonModification3DLookAt_iu52u")
modifications/8 = SubResource("SkeletonModification3DLookAt_a6lgw")

[sub_resource type="SkeletonModification3DStackHolder" id="SkeletonModification3DStackHolder_jt47w"]
held_modification_stack = SubResource("SkeletonModificationStack3D_0mqfe")

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_5osap"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification3DStackHolder_jt47w")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qr2xo"]
albedo_texture = ExtResource("2_vxwx8")
metallic = 0.09
metallic_specular = 0.73
metallic_texture = ExtResource("3_bpjtu")
roughness_texture = ExtResource("3_bpjtu")
roughness_texture_channel = 4
anisotropy_enabled = true
anisotropy = 0.49
anisotropy_flowmap = ExtResource("3_bpjtu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s2vuf"]
albedo_texture = ExtResource("2_vxwx8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_amb1o"]
albedo_texture = ExtResource("2_vxwx8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pdp0u"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0.290196, 0.25098, 0.180392, 1)
emission_energy = 8.12

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2os1g"]
albedo_color = Color(0.666667, 0.654902, 0.654902, 1)
albedo_texture = ExtResource("2_vxwx8")
metallic_specular = 0.22
roughness = 0.69
roughness_texture = ExtResource("3_bpjtu")
normal_scale = -0.11
clearcoat = 0.12
anisotropy = 1.0
heightmap_scale = 0.162

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bh5ig"]
transparency = 1
albedo_color = Color(0, 1, 0.105882, 0.788235)

[node name="GodoDude_Character" type="Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="GodoDude_Rigged_1" parent="." instance=ExtResource("1_w0tqc")]
transform = Transform3D(1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 0, 0, 0)

[node name="Skeleton3D" parent="GodoDude_Rigged_1/metarig" index="0"]
transform = Transform3D(1, 0, -6.39488e-14, 0, 1, 0, 6.39488e-14, 0, 1, 0, 0, 0)
bones/0/position = Vector3(-4.17844e-10, 1.00012, -0.0504204)
bones/0/rotation = Quaternion(0.125146, 0.102484, -0.0129978, 0.986745)
bones/0/scale = Vector3(1, 1, 1)
bones/60/enabled = false
bones/60/position = Vector3(2.85305e-08, 0.110315, 5.30642e-09)
bones/60/rotation = Quaternion(-0.0312546, 0.976255, -0.181924, 0.113375)
bones/60/scale = Vector3(1, 1, 1)
modification_stack = SubResource("SkeletonModificationStack3D_5osap")
script = ExtResource("2_0ra0b")
IK_Script_Active = 0
Hallo = 0

[node name="DummyHull" parent="GodoDude_Rigged_1/metarig/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_qr2xo")
surface_material_override/1 = SubResource("StandardMaterial3D_s2vuf")
surface_material_override/2 = SubResource("StandardMaterial3D_amb1o")
surface_material_override/3 = SubResource("StandardMaterial3D_pdp0u")
surface_material_override/4 = SubResource("StandardMaterial3D_2os1g")

[node name="IK_Targets" type="Node3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D" index="1"]

[node name="Total_Lower_Body" type="Position3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets"]
transform = Transform3D(1, 0, 4.9738e-14, 0, 1, 0, -4.9738e-14, 0, 1, 0, 7.10133e-09, 0)

[node name="Feets_Complete" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body"]
transform = Transform3D(1, 0, 4.26326e-14, 0, 1, 0, -4.26326e-14, 0, 1, 0, 0.525452, 0)
size = Vector3(0.629205, 0.0104632, 0.191407)
material = ExtResource("2_yeyil")

[node name="Both_Knees" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete"]
transform = Transform3D(1, 0, 6.39488e-14, 0, 1, 0, -6.39488e-14, 0, 1, -4.87222e-09, 0.415576, 0.0557318)
size = Vector3(0.491696, 0.0289134, 0.073284)
material = ExtResource("3_ie47r")

[node name="CSGBox3D" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26312, 0, 2.23517e-08)
size = Vector3(0.0771483, 0.0108845, 0.224193)
metadata/_edit_lock_ = true

[node name="CSGBox3D2" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.250952, 0, -2.23517e-08)
size = Vector3(0.0771483, 0.0108845, 0.224193)
metadata/_edit_lock_ = true

[node name="Both_Knee_Targets" type="Position3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees"]
transform = Transform3D(1, 0, -3.55271e-14, 0, 1, 0, 3.55271e-14, 0, 1, 9.55372e-09, -0.752967, -0.109282)
metadata/_edit_lock_ = true

[node name="Right_Knee" type="Node3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets"]
transform = Transform3D(-1, 0, -5.96047e-08, 0, 1, 0, 5.96047e-08, 0, -1, -0.169, 0.350193, 0.11)
metadata/_edit_group_ = true

[node name="Target_Graph2" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets/Right_Knee"]
size = Vector3(0.1, 0.0345708, 0.1)
material = ExtResource("3_ie47r")
metadata/_edit_lock_ = true

[node name="Left_Knee" type="Node3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets"]
transform = Transform3D(1, 8.74227e-08, -2.98022e-08, 8.74227e-08, -0.999999, 0, -8.94069e-08, -7.10542e-15, -0.999999, 0.18107, 0.350193, 0.11)
metadata/_edit_group_ = true

[node name="Target_Graph2" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/Both_Knees/Both_Knee_Targets/Left_Knee"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -2.13163e-14, 0, 1, 0, 0, 0)
size = Vector3(0.1, 0.0345708, 0.1)
material = ExtResource("3_ie47r")
metadata/_edit_lock_ = true

[node name="CSGBox3D" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete"]
transform = Transform3D(1, 0, -6.39488e-14, -1.77636e-15, 1, 0, 5.68434e-14, 0, 1, 0, -0.519452, 0)
size = Vector3(0.959753, 0.002, 0.398183)
material = ExtResource("6_cgxpr")

[node name="Both_Feets_Bottom" type="Position3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D"]
transform = Transform3D(1, 0, 4.9738e-14, 0, 1, 0, -4.9738e-14, 0, 1, 0, 0.00282397, 0)
metadata/_edit_lock_ = true

[node name="Left" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.22, 0, 1.77636e-15)
size = Vector3(0.25, 0.002, 0.25)

[node name="Left_Feet_Tip" type="Node3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left"]
transform = Transform3D(1, 0, -2.41042e-08, 0, 0.999999, 0, 2.41042e-08, 0, 1, -0.0268051, 0.118046, -0.0802302)

[node name="Left_Feet_Target_1" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left/Left_Feet_Tip"]
transform = Transform3D(0.96563, 0.00818368, 0.259804, -0.0188846, 0.999074, 0.0387191, -0.259245, -0.0422945, 0.964888, 0.0233115, -0.0771453, 0.0878008)
size = Vector3(0.05, 0.05, 0.05)
material = ExtResource("3_ie47r")

[node name="Left_Feet_Target_2" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left/Left_Feet_Tip/Left_Feet_Target_1"]
transform = Transform3D(1, 0, -8.9407e-08, 0, 1, 0, 1.19209e-07, 0, 1, -0.00648391, -0.0325822, 0.17235)
size = Vector3(0.0985853, 0.00597854, 0.0184322)
material = ExtResource("3_ie47r")

[node name="Left_Foot_Target" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Left"]
transform = Transform3D(0.933676, 0, 0.358124, 0, 1, 0, -0.358124, 0, 0.933676, -0.0209998, 0.119, -0.0670001)
size = Vector3(0.05, 0.0102496, 0.1)
material = ExtResource("3_ie47r")

[node name="Right" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom"]
transform = Transform3D(1, 0, -7.10543e-15, 1.35763e-29, 1, 0, 7.10543e-15, 0, 1, -0.219942, 0, -1.92279e-08)
size = Vector3(0.25, 0.002, 0.25)

[node name="Right_Feet_Tip" type="Node3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right"]
transform = Transform3D(1, 0, -2.41045e-08, 0, 1, 0, 2.41045e-08, 0, 1, 0.0175336, 0.0774361, -0.0778416)

[node name="Right_Feet_Target_1" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right/Right_Feet_Tip"]
transform = Transform3D(0.99821, -0.0322348, -0.0503363, 0.0365702, 0.995471, 0.0877293, 0.0472805, -0.0894133, 0.99487, -0.00993404, -0.046373, 0.0872412)
size = Vector3(0.05, 0.05, 0.05)
material = ExtResource("3_ie47r")

[node name="Right_Feet_Target_2" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right/Right_Feet_Tip/Right_Feet_Target_1"]
transform = Transform3D(0.999999, 1.81608e-08, -3.1665e-07, 1.95578e-08, 0.999999, 3.72529e-08, 1.86265e-08, -1.49012e-08, 0.999999, -0.0173529, -0.0351994, 0.143382)
size = Vector3(0.114234, 0.006006, 0.0183287)
material = ExtResource("3_ie47r")

[node name="Right_Foot_Target" type="CSGBox3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Lower_Body/Feets_Complete/CSGBox3D/Both_Feets_Bottom/Right"]
transform = Transform3D(0.933579, 0, -0.358368, 0, 1, 0, 0.358368, 0, 0.933579, 0.0210464, 0.119141, -0.0672677)
size = Vector3(0.05, 0.0102496, 0.1)
material = ExtResource("3_ie47r")

[node name="Total_Upper_Body" type="Position3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets"]

[node name="Body_Main_Bone_ALL" type="CSGTorus3D" parent="GodoDude_Rigged_1/metarig/Skeleton3D/IK_Targets/Total_Upper_Body"]
transform = Transform3D(0.99997, 0.00192602, 0.00747061, -1.02445e-07, 0.968339, -0.249639, -0.00771489, 0.249631, 0.96831, -4.17843e-10, 1.00012, -0.0504204)
inner_radius = 0.253617
outer_radius = 0.288327
material = SubResource("StandardMaterial3D_bh5ig")

[editable path="GodoDude_Rigged_1"]
